--- a/Диплом.md
+++ b/Диплом.md
@@ -178,6 +178,11 @@ kubeadm join 10.128.0.20:6443 --token mlmf5i.6la6cbrxy9via93q \
 ----------------------------------------------------------------------------------------------------------------------------
 
 
+добавляем в автозагрузку
+sudo systemctl enable --now kubelet && systemctl status kubelet
+sudo systemctl enable --now kubelet && systemctl status kubelet
+sudo systemctl enable --now kubelet && systemctl status kubelet
+
 версия
 kubectl version
 kubectl version
@@ -256,12 +261,57 @@ masterkubernetes.ru-central1.internal   Ready    control-plane,master   14m     
 
 
 
-------------------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------------------------------------------------
+добавляю на кадлой ноде:
+sudo cat <<EOF>> /etc/hosts
+10.128.0.20 masterkubernetes.ru-central1.internal
+10.128.0.10 node1 kb1.ru-central1.internal
+10.129.0.28 node2 kb2.ru-central1.internal
+10.129.0.11 node3 kb3.ru-central1.internal
+EOF
 
+
+проверяю доступность кластера 
+kubectl cluster-info
+kubectl cluster-info
+kubectl cluster-info
+
+
+kubectl get pods --namespace kube-system
+get pods --namespace kube-system
+get pods --namespace kube-system
+
+
+kubectl get pods
+kubectl get pods
+kubectl get pods
+
+описание:
+Когда приложение работает правильно, каждый из модулей должен иметь:
+Значение 1/1 в колонке ГОТОВО
+Значение Running в столбце СТАТУС
+
+В выходных данных приведенного выше примера модули сделать выводв названии создаются при развертывании модели. 
+Они появятся только в том случае, если в экземпляре приложения, работающего в системе, развернуты модели.
+Значение STATUS, отличное от Running указывает на проблему с модулем.
+Ненулевое и увеличивающееся значение в столбце RESTARTS указывает на проблему с этим модулем.
+
+
+Чтобы установить роль для вашего рабочего узла, используйте следующую команду:
+sudo kubectl label node kb1.ru-central1.internal node-role.kubernetes.io/worker=worker
+
+
+
+
+
+
+
+------------------------------------------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------------------------------------------------
+https://www.cockroachlabs.com/docs/stable/deploy-cockroachdb-with-kubernetes.html?filters=helm
+https://www.cockroachlabs.com/docs/stable/deploy-cockroachdb-with-kubernetes.html?filters=helm
 
 https://habr.com/ru/companies/flant/articles/328756/
 https://habr.com/ru/companies/flant/articles/328756/
@@ -273,10 +323,106 @@ https://habr.com/ru/companies/flant/articles/328756/
 Описать что и как делали и с какими проблемами столкнулись
 
 
+скачиваю
 wget https://raw.githubusercontent.com/cockroachdb/cockroach/master/cloud/kubernetes/cockroachdb-statefulset.yaml
 
+редактирую конфиг под себя
 vim cockroachdb-statefulset.yaml
 storage: 15Gi
 
+
+запускаю
+kubectl create -f cockroachdb-statefulset.yaml
 kubectl create -f cockroachdb-statefulset.yaml
 
+вывод после запуска
+service/cockroachdb-public created
+service/cockroachdb created
+Warning: policy/v1beta1 PodDisruptionBudget is deprecated in v1.21+, unavailable in v1.25+; use policy/v1 PodDisruptionBudget
+poddisruptionbudget.policy/cockroachdb-budget created
+statefulset.apps/cockroachdb created
+
+
+
+удалить 
+kubectl get all
+kubectl get pod
+kubectl delete statefulset.apps/cockroachdb
+
+Helm install
+Helm дает вам быстрый и простой способ развернуть экземпляр PostgreSQL в вашем кластере.
+скачиваем распаковываем
+wget https://get.helm.sh/helm-v3.7.0-linux-amd64.tar.gz && \
+tar xvf helm-v3.7.0-linux-amd64.tar.gz
+
+Переместите двоичные файлы в локальный каталог двоичных файлов
+sudo mv linux-amd64/helm /usr/local/bin
+
+Очистка
+rm helm-v3.7.0-linux-amd64.tar.gz && \
+rm -rf linux-amd64
+
+3.5)
+проверяем версию
+[root@localhost tmp]# helm version
+version.BuildInfo{Version:"v3.7.0", GitCommit:"eeac83883cb4014fe60267ec6373570374ce770b", GitTreeState:"clean", GoVersion:"go1.16.8"}
+
+
+[vorori@masterkubernetes ~]$ helm repo add cockroachdb https://charts.cockroachdb.com/
+"cockroachdb" has been added to your repositories
+
+
+[vorori@masterkubernetes ~]$ helm repo update
+Hang tight while we grab the latest from your chart repositories...
+...Successfully got an update from the "cockroachdb" chart repository
+Update Complete. ⎈Happy Helming!⎈
+
+
+устанавливаем cockroachdb
+helm install my-release --values /home/vorori/my-values.yaml cockroachdb/cockroachdb
+
+
+https://github.com/cockroachdb/helm-charts/blob/master/cockroachdb/values.yaml
+https://github.com/cockroachdb/helm-charts/blob/master/cockroachdb/values.yaml
+https://github.com/cockroachdb/helm-charts/blob/master/cockroachdb/values.yaml
+
+
+https://github.com/cockroachdb/helm-charts/tree/master/cockroachdb
+https://github.com/cockroachdb/helm-charts/tree/master/cockroachdb
+https://github.com/cockroachdb/helm-charts/tree/master/cockroachdb
+
+
+Создайте локальный файл YAML (например, my-values.yaml), чтобы указать свои пользовательские значения. 
+Они будут использоваться для переопределения значений по умолчанию в values.yaml.
+
+
+helm install my-release666 cockroachdb/cockroachdb
+helm install my-release666 cockroachdb/cockroachdb
+helm install my-release666 cockroachdb/cockroachdb
+
+перечислить все версии cockroachdb/
+helm search repo -l cockroachdb/cockroachdb
+helm search repo -l cockroachdb/cockroachdb
+helm search repo -l cockroachdb/cockroachdb
+
+
+
+
+
+
+cockroachdb/cockroach:v23.1.4
+
+
+наблюдаем за установкой
+[vorori@kb1 ~]$ kubectl get pod
+NAME                     READY   STATUS    RESTARTS   AGE
+cockroachdb-0            0/1     Pending   0          2m50s
+cockroachdb-1            0/1     Pending   0          2m50s
+cockroachdb-2            0/1     Pending   0          2m50s
+cockroachdb-init-95852   1/1     Running   0          2m50s
+
+
+
+показать логи podname
+[vorori@kb1 ~]$ kubectl logs cockroachdb-0
+[vorori@kb1 ~]$ kubectl logs cockroachdb-init-95852
