--- a/Диплом.md
+++ b/Диплом.md
@@ -1,26 +1,119 @@
 Диплом 
 
-
-
 преновначальная настройка ОС
 
+1)
+#Выполняю наименование своих четырех машинок 
+Изменить имя хоста с помощью hostnamectl
+Чтобы установить постоянное имя хоста с помощью команды hostnamectl, используйте команду.
+sudo hostnamectl set-hostname kubmaster --static
+sudo hostnamectl set-hostname kub1 --static
+sudo hostnamectl set-hostname kub2 --static
+sudo hostnamectl set-hostname kub3 --static
+
+1.1)
+#в моем случае днс сервера нет поэтому я делаю это вручную
+sudo hostnamectl set-hostname kubmaster --transient
+sudo hostnamectl set-hostname kub1 --transient
+sudo hostnamectl set-hostname kub2 --transient
+sudo hostnamectl set-hostname kub3 --transient
+
+2)
+Подтвердите свое новое имя хоста.
+hostnamectl 
+
+3)
+Этот параметр автоматически обновит файл /etc/hostname.
+cat /etc/hostname 
+
+
+часть 1 Hyper-V окружение
+==========================================================================================================================================================================
+==========================================================================================================================================================================
+==========================================================================================================================================================================
+==========================================================================================================================================================================
+==========================================================================================================================================================================
+1)
+создал сеть остнастка диспетчер виртуальных комутаторов "VM and PC" для обединения рабочей станции с серверами 
+сеть 192.168.2.0 маска 255.255.255.0
+
+
+2)
+создал 1 родительский диск установил настроил Centos7 
+
+
+3)
+создал 4 диска разностных
+Разностный, или дифференциальный (англ. differencing) виртуальный жесткий диск (VHD) 
+является одним из трех типов виртуальных дисков, которые используются в Hyper-V. 
+Разностный диск еще иногда называют «дочерним», так как он не является самостоятельным 
+диском и в процессе работы полностью зависит от «родительского» диска. 
+
+
+4)
+создал 4vm
+hostname kubmaster ip  192.168.2.10
+hostname kub1      ip  192.168.2.11
+hostname kub2      ip  192.168.2.12
+hostname kub3      ip  192.168.2.13
+
+
+5)
+Запускаем каждый сервер и делаем настройки
+настройка сеть на каждом сервере linux 
+
+пример:
+cat <<EOF | > sudo tee /etc/sysconfig/network-scripts/ifcfg-eth0
+TYPE=Ethernet
+HWADDR=00:15:5d:02:06:2e
+PROXY_METHOD=none
+BROWSER_ONLY=no
+BOOTPROTO=none
+IPADDR=192.168.2.13
+PREFIX=24
+GATEWAY=192.168.2.1
+DNS1=192.168.2.1
+DEFROUTE=yes
+IPV4_FAILURE_FATAL=no
+IPV6INIT=no
+IPV6_AUTOCONF=yes
+IPV6_DEFROUTE=yes
+IPV6_FAILURE_FATAL=no
+IPV6_ADDR_GEN_MODE=stable-privacy
+NAME=eth0
+UUID=2aa5d1b2-e909-4e4c-b697-43de691d7bf2
+DEVICE=eth0
+ONBOOT=ye
+EOF
+
+
+
+vim /etc/sysconfig/network-scripts/ifcfg-eth0
+systemctl restart network
+
+
+
+
+==========================================================================================================================================================================
+
+
 hostname && hostname -i
 hostname && hostname -i
 hostname && hostname -i
 
 
-masterkubernetes.ru-central1.internal
-10.128.0.20
+1) добавляю на каждой ноде 
+sudo cat <<EOF>> /etc/hosts
+192.168.2.10 kubmaster
+192.168.2.11 node1 kub1
+192.168.2.12 node2 kub2
+192.168.2.13 node3 kub3
+EOF
 
-kb1.ru-central1.internal
-10.128.0.10
-
-kb2.ru-central1.internal
-10.129.0.28
-
-kb3.ru-central1.internal
-10.129.0.11
-
+hostname kubmaster ip  192.168.2.10
+hostname kub1      ip  192.168.2.11
+hostname kub2      ip  192.168.2.12
+hostname kub3      ip  192.168.2.13
 
 
 Шаг 1: Предварительные требования 
