--- a/Диплом.md
+++ b/Диплом.md
@@ -1,4 +1,11 @@
-Диплом 111
+черновик
+kubectl get all
+kubectl get all -A
+kubectl get pods
+kubectl get nodes
+kubectl get pv
+kubectl get all -o wide
+
 
 преновначальная настройка ОС
 
