--- a/Диплом.md
+++ b/Диплом.md
@@ -1,10 +1,100 @@
 черновик
+----------------------------------------------------------
 kubectl get all
 kubectl get all -A
 kubectl get pods
 kubectl get nodes
 kubectl get pv
 kubectl get all -o wide
+
+-- посмотрим дефолтный тип стораджа
+kubectl get storageclasses
+
+kubectl get pvc -o wide
+kubectl get pv -o wide
+----------------------------------------------------------
+
+
+сделать алиасы в файле .baashrc
+----------------------------------------------------------
+# some more ls aliases
+alias ll='ls -alf'
+alias la='ls -A'
+alias l='ls -CF'
+alias gc='cd /mnt/d/download/5homework; sudo git clone'
+alias k='kubectl'
+alias kg='kubectl get all'
+alias kga='kubectl get all -A' alias ka 'kubectl apply -f
+alias kd='kubectl delete -f .'
+alias kc='kubectl describe'
+alias h='helm'
+alias nr='newman run'
+----------------------------------------------------------
+
+
+----------------------------------------------------------
+про то как подключать диск а именно pv PersistentVolume 
+расказывает на 40 минуте -44 минута
+-----------------
+1)пример создания заявки на PersistentVolume:
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+	name: pvc-demo
+spec:
+  accessModes:
+	- ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+-----------------
+-----------------
+2)а тут мы уже нашим преложением подвязывемся к сушествуюшему pv
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+name: postgres-pv-claim  # в моем случае pvc-demo
+labels:
+app: postgres
+spec:
+storageClassName: manual
+accessModes:
+-
+ReadWriteMany
+resources:
+requests:
+storage: 5Gi
+-----------------
+----------------------------------------------------------
+
+
+----------------------------------------------------------
+пример запуска postgres со всеми настройками кторые нам нужны видео 49 минута
+kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-deployment.yaml -f postgres-service.yaml
+kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-deployment.yaml -f postgres-service.yaml
+kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-deployment.yaml -f postgres-service.yaml
+
+
+файлик postgres-service.yaml
+-----------------
+apiVersion: v1 
+kind: Service 
+metadata:
+   name: postgres 
+   Labels:
+     app: postgres
+spec:
+  type: NodePort 
+  ports:
+  - port: 5432 
+  selector:
+    app: postgres
+-----------------
+
+----------------------------------------------------------
+
 
 
 преновначальная настройка ОС
