--- a/Диплом.md
+++ b/Диплом.md
@@ -32,6 +32,11 @@ alias nr='newman run'
 ----------------------------------------------------------
 
 
+
+----------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------примеры конфигураций для создания диска---------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------------------------
+
 ----------------------------------------------------------
 про то как подключать диск а именно pv PersistentVolume 
 расказывает на 40 минуте -44 минута
@@ -77,6 +82,12 @@ kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-de
 kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-deployment.yaml -f postgres-service.yaml
 
 
+----------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------примеры конфигураций:---------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------------------------
+
+
+----------------------------------------------------------
 файлик postgres-service.yaml
 -----------------
 apiVersion: v1 
