--- a/Диплом.md
+++ b/Диплом.md
@@ -60,17 +60,16 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-name: postgres-pv-claim  # в моем случае pvc-demo
-labels:
-app: postgres
+  name: postgres-pv-claim  # в моем случае pvc-demo!!!!!!
+  labels:
+    app: postgres
 spec:
-storageClassName: manual
-accessModes:
--
-ReadWriteMany
-resources:
-requests:
-storage: 5Gi
+  storageClassName: manual
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 5Gi
 -----------------
 ----------------------------------------------------------
 
