--- a/Диплом.md
+++ b/Диплом.md
@@ -85,6 +85,39 @@ kubectl apply -f postgres-configmap.yaml -f postgres-storage.yaml -f postgres-de
 ----------------------------------------------------------примеры конфигураций:---------------------------------------------------------------------
 ----------------------------------------------------------------------------------------------------------------------------------------------------
 
+58:46
+----------------------------------------------------------
+файлик postgres-deployment.yaml
+-----------------
+apiVersion: apps/v1 
+kind: Deployment 
+metadata:
+   name: postgres
+spec:
+  replicas: 1 
+  selector:
+     matchLabels:
+       app: postgres
+  template:
+    metadata:
+     Labels:
+	  app: postgres
+    spec:
+     containers:
+	   - name: postgres image: postgres:14
+         imagePullPolicy: "IfNotPresent"
+         ports:
+- containerPort: 5432
+envFrom:
+- configMapRef:
+name: postgres-config
+volumeMounts:
+- mountPath: /var/lib/postgresql
+name: postgredb
+-----------------
+
+----------------------------------------------------------
+
 
 ----------------------------------------------------------
 файлик postgres-service.yaml
