--- a/Диплом.md
+++ b/Диплом.md
@@ -1,3 +1,13 @@
+крутые статьи
+https://goteleport.com/blog/running-postgresql-on-kubernetes/
+https://goteleport.com/blog/running-postgresql-on-kubernetes/
+https://goteleport.com/blog/running-postgresql-on-kubernetes/
+
+https://www.citusdata.com/product/community
+https://www.citusdata.com/product/community
+https://www.citusdata.com/product/community
+
+
 черновик
 ----------------------------------------------------------
 kubectl get all
@@ -15,7 +25,7 @@ kubectl get pv -o wide
 ----------------------------------------------------------
 
 
-сделать алиасы в файле .baashrc
+сделать алиасы в файле .baashrc для упрошения ввода команд
 ----------------------------------------------------------
 # some more ls aliases
 alias ll='ls -alf'
