--- a/диплом вечер.md
+++ b/диплом вечер.md
@@ -30,6 +30,11 @@ patronictl -c postgres.yml list
 patronictl -c postgres.yml list
 patronictl -c postgres.yml list
 
+
+patronictl -c postgres.yml edit-config
+patronictl -c postgres.yml edit-config
+patronictl -c postgres.yml edit-config
+
 WALG_FILE_PREFIX
 'envdir /etc/wal-g.d/env /usr/local/bin/wal-g wal-push %p'"
 'usr/local/bin/wal-g wal-push "%p"'
@@ -38,6 +43,13 @@ WALG_FILE_PREFIX
 /usr/local/bin/wal-g
 /usr/local/bin/wal-g/wal-g-pg wal-push \"%p\"
 
+
+
+
+
+
+ALTER SYSTEM SET archive_command = '/usr/local/bin/wal-g wal-push "%p"'
+ALTER SYSTEM SET archive_command = 'test ! -f /var/lib/postgresql/archive/%f && cp %p /var/lib/postgresql/archive/%f'
 
 КОМАНДА КОТОРАЯ СРАБОТАЛА!!!!!!!!!! ВРУЧНУЮ!!!!!!!!!!!!!
 https://github.com/zalando/postgres-operator/issues/1233
@@ -50,6 +62,8 @@ wal-g wal-push "/home/postgres/pgdata/pgroot/data/pg_wal/00000002000000000000000
 /usr/local/bin/wal-g wal-push "/home/postgres/pgdata/pgroot/data/pg_wal/000000020000000000000007"
 /usr/local/bin/wal-g wal-push "/home/postgres/pgdata/pgroot/data/pg_wal/000000020000000000000007"
 /usr/local/bin/wal-g wal-push "/home/postgres/pgdata/pgroot/data/pg_wal/000000020000000000000007"
+
+envdir /config /usr/local/bin/wal-g wal-push /home/postgres/pgdata/pgroot/data/pg_wal/000000010000000000000009
 ============================================================================================
 INFO: 2023/08/18 13:31:21.924747 FILE PATH: 000000020000000000000007.lz4
 
@@ -76,6 +90,7 @@ select pg_switch_wal();
 
 #создаем окружения для backup
 
+rm -rf /data/spilo_backup-script_suka.yaml
 vim /data/spilo_backup-script_suka.yaml
 ---
 apiVersion: v1
@@ -132,7 +147,7 @@ kubectl delete configmap backup-script
 kubectl delete configmap backup-script
 kubectl delete configmap backup-script
 
-
+rm -rf /data/spilo_kubernetes_final_suka.yaml
 vim /data/spilo_kubernetes_final_suka.yaml
 cat /data/spilo_kubernetes_final_suka.yaml
 
@@ -286,14 +301,40 @@ spec:
                     track_commit_timestamp: "off"
                     wal_log_hints: on
                     hot_standby_feedback: off
-                    archive_mode: on
-                    archive_command: '/usr/local/bin/wal-g wal-push "%p"'
+				  pg_hba:
+                  - local all all trust 
+                  - hostssl all +zalandos 127.0.0.1/32 pam 
+                  - host all all 127.0.0.1/32 md5  
+                  - hostssl all +zalandos ::1/128 pam  
+                  - host all all ::1/128 md5   
+                  - local replication standby trust      
+                  - hostssl replication standby all md5       
+                  - hostnossl all all all md5   
+                  - hostssl all +zalandos all pam         
+              - hostssl all all all md5
               initdb:
                 - auth-host: md5
                 - encoding: UTF8
                 - auth-host: md5
                 - auth-local: peer
-                - data-checksums
+              	- data-checksums
+              pg_hba:
+              - local all all trust 
+              - hostssl all +zalandos 127.0.0.1/32 pam 
+              - host all all 127.0.0.1/32 md5  
+              - hostssl all +zalandos ::1/128 pam  
+              - host all all ::1/128 md5   
+              - local replication standby trust      
+              - hostssl replication standby all md5       
+              - hostnossl all all all md5   
+              - hostssl all +zalandos all pam         
+              - hostssl all all all md5
+	        postgresql:
+			  parameters:
+			    log_destination: 'stderr'
+				log_line_prefix: '%m [%p] %d %u %h (transaction ID %x)'
+				archive_mode: on
+				archive_command: '/usr/local/bin/wal-g wal-push "%p"'
         - name: POD_IP
           valueFrom:
             fieldRef:
@@ -517,9 +558,13 @@ data:
   BACKUP_NUM_TO_RETAIN: "5"
   USE_WALG_BACKUP: "true"
   USE_WALG_RESTORE: "true"
+  WAL_BUCKET_SCOPE_PREFIX: ""
+  WAL_BUCKET_SCOPE_SUFFIX: ""
   WALG_ALIVE_CHECK_INTERVAL: "5m"
   WALE_BINARY: "wal-g"
-  WALG_FILE_PREFIX: "/home/postgres/pgdata/pgroot/pg_log"
+  WALG_FILE_PREFIX: "/data/pg_wal"
+  CLONE_USE_WALG_RESTORE: "true"
+  WALG_DISABLE_S3_SSE: "true"
   WALE_ENV_DIR: "/config"
 
 
