--- a/диплом вечер.md
+++ b/диплом вечер.md
@@ -301,40 +301,42 @@ spec:
                     track_commit_timestamp: "off"
                     wal_log_hints: on
                     hot_standby_feedback: off
-				  pg_hba:
-                  - local all all trust 
-                  - hostssl all +zalandos 127.0.0.1/32 pam 
-                  - host all all 127.0.0.1/32 md5  
-                  - hostssl all +zalandos ::1/128 pam  
-                  - host all all ::1/128 md5   
-                  - local replication standby trust      
-                  - hostssl replication standby all md5       
-                  - hostnossl all all all md5   
-                  - hostssl all +zalandos all pam         
-              - hostssl all all all md5
+                  pg_hba:
+                  - local     all         all                    trust
+                  - hostssl   all         +zalandos 127.0.0.1/32 pam
+                  - host      all         all       127.0.0.1/32 md5
+                  - hostssl   all         +zalandos ::1/128      pam
+                  - host      all         all       ::1/128      md5
+                  - local     replication standby                trust
+                  - hostssl   replication standby   all          md5
+                  - hostnossl all         all       all          md5
+                  - hostssl   all         +zalandos all          pam
+                  - hostssl   all         all       all          md5
               initdb:
                 - auth-host: md5
                 - encoding: UTF8
                 - auth-host: md5
                 - auth-local: peer
-              	- data-checksums
+                - data-checksums
               pg_hba:
-              - local all all trust 
-              - hostssl all +zalandos 127.0.0.1/32 pam 
-              - host all all 127.0.0.1/32 md5  
-              - hostssl all +zalandos ::1/128 pam  
-              - host all all ::1/128 md5   
-              - local replication standby trust      
-              - hostssl replication standby all md5       
-              - hostnossl all all all md5   
-              - hostssl all +zalandos all pam         
-              - hostssl all all all md5
-	        postgresql:
-			  parameters:
-			    log_destination: 'stderr'
-				log_line_prefix: '%m [%p] %d %u %h (transaction ID %x)'
-				archive_mode: on
-				archive_command: '/usr/local/bin/wal-g wal-push "%p"'
+              - local     all         all                    trust
+              - hostssl   all         +zalandos 127.0.0.1/32 pam
+              - host      all         all       127.0.0.1/32 md5
+              - hostssl   all         +zalandos ::1/128      pam
+              - host      all         all       ::1/128      md5
+              - local     replication standby                trust
+              - hostssl   replication standby   all          md5
+              - hostnossl all         all       all          md5
+              - hostssl   all         +zalandos all          pam
+              - hostssl   all         all       all          md5
+              postgresql:
+                parameters:
+                  log_destination: 'stderr'
+                  log_line_prefix: '%m [%p] %d %u %h (transaction ID %x)'
+                  archive_mode: on
+                  archive_command: 'envdir /config /usr/local/bin/wal-g wal-push "%p"'
+                recovery_conf:
+                    restore_command: 'envdir /config /usr/local/bin/wal-g wal-fetch "%f" "%p"'
         - name: POD_IP
           valueFrom:
             fieldRef:
